pages/index.css
.logo-letters {
    display: inline-block ;
    font-weight: normal ;
    color: #A60067;
    font-family: Trap;
    font-size: 28px;
}

.scroll-container {
    margin-top: 78vh;
}

.scroll-top {
    position: fixed;
    right: 15%;
}

